# silencio

./: README.md  main.py  pyproject.toml
app/: streamlit_app.py
app/util/: formatting.py
src/silencio/: __init__.py  settings.py
src/silencio/ai/: __init__.py  base.py  openai_client.py
src/silencio/core/: __init__.py  chat.py  formatting.py  redact.py  replace.py
