[project]
name = "silencio"
version = "0.1.0"
description = "LLM-based text redaction app for sensitive information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.3.0",
    "pyahocorasick>=2.2.0",
    "pydantic>=2.12.2",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# no special tools yet
